zaki / fix_mt5_password_meter (#6431)
* fix: reset password back initial state when going back

* fix: lastpass icon overlap and add autocomplete attributes for password

* fix: switched steps for clearing password meter

* fix: autocomplete prop not in camelCase

--- a/src/sass/_common/common.scss
+++ b/src/sass/_common/common.scss
@@ -567,6 +567,9 @@ button .barspinner.white {
             top: 8px;
         }
     }
+    input[style*='background'] ~ &--toggle {
+        right: 32px;
+    }
 }
 
 ul.bullet.gr-row > li {
